# sample-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sample_project/: __init__.py  cli.py
src/webchat/: __init__.py  app.py
src/webchat/static/css/: style.css
src/webchat/static/js/: chat.js
src/webchat/templates/: index.html
tests/: __init__.py  test_app.py  test_cli.py
